# Visual-brain-study

./: .gitignore  Datasets.md  README.md  accuracies_per_epoch.pkl  basic-run.sh  distribution_study.py  eeg_signal_classification.py  env_backup.txt  images-to-visual-features.py  losses_per_epoch.pkl  map-signals-to-representation.py  pyproject.toml  requirements.txt  results.md  run.sh  test.py  train_RegressedClassification.py  train_visual2brain.py  visualOnly.py  visual_to_brain_features.py
Training/: Readme.md  fit.py
misc/: spec-test.py
models/: ATCNet.py  AttnSleep.py  BrainDecoder.py  BrainDecoder3D.py  CNN_LSTM.py  DCTVIT.py  EEGChannelNet.py  EEGConformer.py  EEGViT.py  FusedBrainDecoder3D.py  HumbleBrainDecoder3D.py  NeuroStream.py  NeuroStream4D.py  SleepingPower.py  SpectralBrainDecoder3D.py  SyncNet.py  TemporalMap.py  VisualOnlyClassifier.py  VisualTransforms.py  __init__.py  layers.py  lstm.py  registery.py  visualModels.py
old scripts/: brainFeaturesOnly.py  train_RegressedClassification.py
resources/: block_splits_by_separated_classes_all.pth  unseenclasses_path.pth
scripts/: aggregate-results.py  bias-analysis.py  build_semantic_dataset.py  eeg_semantic_classification.py  eeg_separate_classification.py  eeg_signal_classification.py  evaluate_models.py  generate-freqdistribution.py  generate_semantic_splits.py  generate_session_splits.py  generate_spec_samples.py  semantic-classification.py  semantic-distribution.py  separate-classification.py  standard-classification.py  summarize-model.py
utils/: EEGDataset.py  SemanticEEGDataset.py  lib.py  (+5 more)
(+57 files in other folders)
