[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eeg-visual-classification"
version = "0.1.0"
description = "EEG-based visual stimulus classification: SST representation, NeuroStream models, baselines, and experiment scripts."
requires-python = ">=3.9"

[tool.setuptools.packages.find]
include = ["eeg_visual_classification*"]
